<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorSwatch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:height="@dimen/color_swatch_size" />

    <TextView
        android:id="@+id/hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/colorSwatch"
        android:layout_marginTop="@dimen/activity_padding"
        android:labelFor="@+id/hueLayout"
        android:text="@string/hue"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <FrameLayout
        android:id="@+id/hueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hue">

        <ImageView
            android:id="@+id/hueGradient"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient_hue"
            android:contentDescription="@string/hue_description" />

        <SeekBar
            android:id="@+id/hueSB"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:elevation="9dp"
            android:max="359" />
    </FrameLayout>

    <TextView
        android:id="@+id/saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hueLayout"
        android:layout_marginTop="@dimen/activity_padding"
        android:labelFor="@+id/saturationLayout"
        android:text="@string/saturation"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <FrameLayout
        android:id="@+id/saturationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saturation">

        <ImageView
            android:id="@+id/saturationGradient"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient_saturation"
            android:contentDescription="@string/saturation_description" />

        <SeekBar
            android:id="@+id/saturationSB"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:max="100" />
    </FrameLayout>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saturationLayout"
        android:layout_marginTop="@dimen/activity_padding"
        android:labelFor="@+id/valueLayout"
        android:text="@string/value"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <FrameLayout
        android:id="@+id/valueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value">

        <ImageView
            android:id="@+id/valueGradient"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@drawable/gradient_brightness"
            android:contentDescription="@string/value_description" />

        <SeekBar
            android:id="@+id/valueSB"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:max="100" />
    </FrameLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/colorButtonGroup"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_padding"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blackBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:background="@android:color/black"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/redBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/red"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/limeBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/lime"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/blueBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/blue"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/yellowBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/yellow"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/cyanBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/cyan"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/magentaBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/magenta"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/silverBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/silver"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/grayBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/gray"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/maroonBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/maroon"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/oliveBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/olive"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/greenBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/green"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/purpleBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/purple"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/tealBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/teal"
                android:onClick="onColorButtonClick" />

            <Button
                android:id="@+id/navyBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="@dimen/color_box_size"
                android:layout_height="@dimen/color_box_size"
                android:layout_marginStart="@dimen/activity_padding"
                android:background="@color/navy"
                android:onClick="onColorButtonClick" />

        </LinearLayout>
    </HorizontalScrollView>
</android.widget.RelativeLayout>
